--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -20,83 +20,72 @@
     </article> <!-- gallery-wrap .end// -->
             </aside>
             <main class="col-md-6 border-left">
-    <article class="content-body">
-    
-    <h2 class="title">{{ single_product.product_name }}</h2>
-    
-    <div class="rating-wrap my-3">
-        <ul class="rating-stars">
-            <li style="width:80%" class="stars-active">
-                <img src="../images/icons/stars-active.svg" alt="">
-            </li>
-            <li>
-                <img src="../images/icons/starts-disable.svg" alt="">
-            </li>
-        </ul>
-        <small class="label-rating text-muted">132 reviews</small>
-        <small class="label-rating text-success"> <i class="fa fa-clipboard-check"></i> 154 orders </small>
-    </div> <!-- rating-wrap.// -->
-    
-    <div class="mb-3"> 
-        <var class="price h4">$ {{single_product.price}}</var> 
-        <span class="text-muted">/per kg</span> 
-    </div> 
-    
-    <p>{{single_product.description}}</p>
-    
-    <dl class="row">
-      <dt class="col-sm-3">Model#</dt>
-      <dd class="col-sm-9">Odsy-1000</dd>
-    
-      <dt class="col-sm-3">Color</dt>
-      <dd class="col-sm-9">Brown</dd>
-    
-      <dt class="col-sm-3">Delivery</dt>
-      <dd class="col-sm-9">Russia, USA, and Europe </dd>
-    </dl>
-    
-    <hr>
-        <div class="row">
-            <div class="form-group col-md flex-grow-0">
-                <label>Quantity</label>
-                <div class="input-group mb-3 input-spinner">
-                  <div class="input-group-prepend">
-                    <button class="btn btn-light" type="button" id="button-plus"> + </button>
-                  </div>
-                  <input type="text" class="form-control" value="1">
-                  <div class="input-group-append">
-                    <button class="btn btn-light" type="button" id="button-minus"> &minus; </button>
-                  </div>
-                </div>
-            </div> <!-- col.// -->
-            <div class="form-group col-md">
-                    <label>Select size</label>
-                    <div class="mt-2">
-                        <label class="custom-control custom-radio custom-control-inline">
-                          <input type="radio" name="select_size" checked="" class="custom-control-input">
-                          <div class="custom-control-label">Small</div>
-                        </label>
-    
-                        <label class="custom-control custom-radio custom-control-inline">
-                          <input type="radio" name="select_size" class="custom-control-input">
-                          <div class="custom-control-label">Medium</div>
-                        </label>
-    
-                        <label class="custom-control custom-radio custom-control-inline">
-                          <input type="radio" name="select_size" class="custom-control-input">
-                          <div class="custom-control-label">Large</div>
-                        </label>
-    
+                <form action="{% url 'add_cart' single_product.id %}" method="POST">
+                    {% csrf_token %}
+                            <article class="content-body">
+                <h2 class="title">{{ single_product.product_name }}</h2>
+                
+                <div class="rating-wrap my-3">
+                    <ul class="rating-stars">
+                        <li style="width:80%" class="stars-active">
+                            <img src="../images/icons/stars-active.svg" alt="">
+                        </li>
+                        <li>
+                            <img src="../images/icons/starts-disable.svg" alt="">
+                        </li>
+                    </ul>
+                    <small class="label-rating text-muted">132 reviews</small>
+                    <small class="label-rating text-success"> <i class="fa fa-clipboard-check"></i> 154 orders </small>
+                </div> <!-- rating-wrap.// -->
+                
+                <div class="mb-3"> 
+                    <var class="price h4">$ {{single_product.price}}</var> 
+                    <span class="text-muted">/per kg</span> 
+                </div> 
+                
+                <p>{{single_product.description}}</p>
+                
+                <dl class="row">
+                <dt class="col-sm-3">Model#</dt>
+                <dd class="col-sm-9">Odsy-1000</dd>
+                
+                <dt class="col-sm-3">Color</dt>
+                <dd class="col-sm-9">Brown</dd>
+                
+                <dt class="col-sm-3">Delivery</dt>
+                <dd class="col-sm-9">Russia, USA, and Europe </dd>
+                </dl>
+                
+                <hr>
+                    <div class="row">
+                        <div class="item-option-select">
+                            <h6>Choose Color</h6>
+                            <select name="color" class="form-control" required>
+                                <option value="" disabled selected>Select Color</option>
+                                {% for i in single_product.variation_set.color %}
+                                <option value="{{i.variation_value | lower }}">{{i.variation_value  | capfirst }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
                     </div>
-            </div> <!-- col.// -->
-        </div> <!-- row.// -->
-        {% if single_product.stock <= 0 %}
-            <h5 class="text-danger">Out of Stock</h5>
-        {% else %}
-        <a href="#" class="btn  btn-primary"> Buy now </a>
-        <a href="#" class="btn  btn-outline-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
-        {% endif %}
-    </article> <!-- product-info-aside .// -->
+                    <div class="row">
+                        <div class="item-option-select">
+                            <h6>Choose Size</h6>
+                            <select name="size" class="form-control" required>
+                                <option value="" disabled selected>Select Size</option>
+                                {% for i in single_product.variation_set.size %}
+                                <option value="{{i.variation_value | lower}}">{{i.variation_value | capfirst }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    {% if single_product.stock <= 0 %}
+                        <h5 class="text-danger">Out of Stock</h5>
+                    {% else %}
+                    <button type="submit" class="btn  btn-primary"> <span class="text">Add to Cart</span> <i class="fa fa-shopping-cart"></i> </button>
+                    {% endif %}
+                </article> <!-- product-info-aside .// -->
+</form>
             </main> <!-- col.// -->
         </div> <!-- row.// -->
     </div> <!-- card.// -->
