--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -40,20 +40,16 @@
                 
                 <div class="mb-3"> 
                     <var class="price h4">$ {{single_product.price}}</var> 
-                    <span class="text-muted">/per kg</span> 
                 </div> 
                 
                 <p>{{single_product.description}}</p>
                 
                 <dl class="row">
                 <dt class="col-sm-3">Model#</dt>
-                <dd class="col-sm-9">Odsy-1000</dd>
-                
-                <dt class="col-sm-3">Color</dt>
-                <dd class="col-sm-9">Brown</dd>
+                <dd class="col-sm-9">Odsy-1000</dd>           
                 
                 <dt class="col-sm-3">Delivery</dt>
-                <dd class="col-sm-9">Russia, USA, and Europe </dd>
+                <dd class="col-sm-9">All Places, USA </dd>
                 </dl>
                 
                 <hr>
